Add request logging setting
